--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,8 @@
   "name": "HelloIonic",
   "private": "true",
   "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.2.4"
+    "ionic": "driftyco/ionic-bower#1.2.4",
+    "ngstorage": "^0.3.10",
+    "firebase": "^2.4.1"
   }
 }
