--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "%5Bappname%5D",
+  "name": "Musiquality",
   "version": "1.1.1",
-  "description": "[appName]: An Ionic project",
+  "description": "Music app MATC",
   "dependencies": {
     "gulp": "^3.5.6",
     "gulp-sass": "^2.0.4",
